Card position fixed in mobile view

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <section class="bg-light" id="services">
       <div class="container">
         <h1 class="font-style-bolder col-12 align-items-center text-center pt-5">About Me<br></h1>
-      <div class="row mt-5 p-5" >
+      <div class="row mt-5 p-5" style="display: flex; justify-content: space-between ;" >
        
-        <div class="card p-4 pt-4 col-12 col-md-3 ml-5 text-center mt-2" style=" height: 28rem  align-items-center">
+        <div class="card pt-4 col-12 col-md-3 text-center mt-2" style=" height: 28rem align-items-center">
           <div class="card-body">
             <img class="card-img-top align-items-center" src="https://tse3.mm.bing.net/th?id=OIP.GVhZiY6mRWJmELdhHs0ttwHaFP&pid=Api&P=0&h=180 "alt="" style="height: 70px;width: 50px;">
             <h5 class="card-title text-center">Web Designer</h5>
@@ -82,7 +82,7 @@
           
           </div>
         </div>
-        <div class="card p-4 pt-4 col-12 col-md-3 ml-5 text-center mt-2" style=" height: 28rem  align-items-center">
+        <div class="card pt-4 col-12 col-md-3  text-center mt-2" style=" height: 28rem align-items-center">
           <div class="card-body">
               <i class="bi bi-laptop pt-2"style=" font-size:70px; background-image: linear-gradient(to right, #f2994a, #f2c94c); -webkit-background-clip: text; background-clip: text; color: transparent;"></i>
               <h5 class="card-title">programmer</h5>
@@ -91,7 +91,7 @@
               <p class="card-text "> an entry-level programer with foundational skills in java, python, c andc++.</p>
             </div>
           </div>
-          <div class="card p-4 pt-4 col-12 col-md-3 ml-5 text-center mt-2" style=" height: 28rem  align-items-center">
+          <div class="card p-4 pt-4 col-12 col-md-3  text-center mt-2" style=" height: 28rem align-items-center">
             <div class="card-body">
                 <img src="https://tse2.mm.bing.net/th?id=OIP.4ItM4Ob9-RsToxISSFgRTwHaEK&pid=Api&P=0&h=180"alt="" style="height: 75px;width: 80px;">
               <h5 class="card-title pt-2"> Cricketer</h5>
